write part of project description and expectation

--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -1,6 +1,4 @@
 % !TEX root = ./main.tex
-% !TEX program = xelatex
-% !TEX options = -synctex=1 -interaction=nonstopmode -file-line-error "%DOC%"
 
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -25,10 +23,10 @@ Github: \href{https://github.com/johnnychen94}{Johnnychen94}}
 
 \noindent The author is currently a third-year graduate student and Ph.D candidate in School of Mathematical Sciences, East China Normal University, Shanghai, China. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
 
-\section{Project}
+\input{project}
 
 \section{Delivery and milestone}
 
-\include{aboutauthor}
+\input{aboutauthor}
 
 \end{document}
