draft project description and its importance

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -6,7 +6,7 @@ My name is \textsf{Jiuning Chen}\footnote{This is the official name, but for mos
 
 \subsection{Programming Background}
 
-I started to use \langmatlab to do research on image processing in the end of 2016, met and immediately fell in love with \langjulia at Aug 9, 2018\footnote{It's the day after the historic announcement of \langjulia \version{1.0}.}, and learned \python during the Spring Festival of 2019. \par
+I started to use \langmatlab to do research on image processing in the end of 2016, met and immediately fell in love with \langjulia at Aug 9, 2018\footnote{It's the day after the historic announcement of \langjulia \version{1.0}.}, and learned \langpython during the Spring Festival of 2019. \par
 
 Although my programming career is only about three years, however, I think I'm qualified to achieve the project milestones for the contributions I've done to members in the lab of my supervisor:
 
