--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -6,6 +6,8 @@
 \usepackage{marvosym} % \Email
 \usepackage{cleveref}
 \usepackage{xspace}
+\usepackage{minted}
+
 \input{symbols.tex}
 
 \title{GSoC 2019 Project\\Towards Better Images Ecosystem}
