--- a/Proposal/symbols.tex
+++ b/Proposal/symbols.tex
@@ -8,7 +8,7 @@
 % programming
 \newcommand{\langmatlab}{\sname{MATLAB}\xspace}
 \newcommand{\langjulia}{\sname{Julia}\xspace}
-\newcommand{\python}{\sname{Python}\xspace}
+\newcommand{\langpython}{\sname{Python}\xspace}
 
 % github
 \newcommand{\pullrequest}[3]{\href{https://github.com/#1/#2/pull/#3}{\sname{#1/#2\##3}}}
@@ -31,6 +31,9 @@
 \newcommand{\flux}{\reponame{Flux.jl}}
 \newcommand{\jump}{\reponame{JuMP.jl}}
 \newcommand{\gpuarrays}{\reponame{GPUArrays.jl}}
+\newcommand{\pycall}{\reponame{PyCall.jl}}
+\newcommand{\imagebinarization}{\reponame{ImageBinarization.jl}}
+\newcommand{\histogramthresholding}{\reponame{HistogramThresholding.jl}}
 
 % repository urls
 \newcommand{\gitrepo}[2]{\href{https://github.com/#1/#2}{\sname{#2}}\xspace}
@@ -40,7 +43,10 @@
 \newcommand{\reposcikitimage}{\gitrepo{scikit-image}{scikit-image}}
 \newcommand{\repojump}{\gitrepo{JuliaOpt}{\jump}}
 \newcommand{\repogpuarrays}{\gitrepo{JuliaGPU}{\gpuarrays}}
-\newcommand{\repoimages}{\gitrepo{juliaimages}{\images}}
+\newcommand{\repoimages}{\gitrepo{\juliaimages}{\images}}
+\newcommand{\repopycall}{\gitrepo{JuliaPy}{\pycall}}
+\newcommand{\repoimagebinarization}{\gitrepo{zygmuntszpak}{\imagebinarization}}
+\newcommand{\repohistogramthresholding}{\gitrepo{zygmuntszpak}{\histogramthresholding}}
 
 % other urls
 \newcommand{\matlabimageprocessing}{\href{https://www.mathworks.com/products/image.html}{\sname{MATLAB Image Processing Toolbox}\xspace}}
