--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -1,24 +1,42 @@
 % !TEX root = ./main.tex
 
-\section{Project}\label{sec:project}
+\section{Project Introduction}\label{sec:project}
 
 \repoimages{} is a \langjulia image-processing toolbox, including several packages such as: \imagecore, \imagetransformations, \imageaxes. It provides a collection of out-of-box functions\footnote{An overview of currently implemented image-processing functionalities is shown at \apicomparison.} to do image processing tasks just like \reposcikitimage and \matlabimageprocessing.
 
-However, despite of the performance, this toolbox at present is still not friendly to both users and developers. For example:
+However, despite of the performance, this toolbox at present is still not friendly to both users and developers; Unlike other mature julia packages such as \repojump and \repogpuarrays, \images{} requires potential users to understand the very details of its mechanism and architecture, and this is even harder for them without comprehensive documentation on it. Under this circumstance, most image-processing researchers are still using \langpython and \langmatlab for their daily work.
 
+Some apparent causes for its poor usability are:
 \begin{itemize}
-    \item there's no demo of \images{} for new users to start with;
-    \item the APIs lacks of consistence;
+    \item there's few demos or recipes in \images{} for new users to start with;
+    \item the APIs lack of consistence and don't match the julian style well;
     \item there's no style guide on naming and programming;
     \item there're too many temporary helper functions defined everywhere;
-    \item \images{} is an ecosystem but it lacks of a comprehensive illustration of its packages.
+    \item \images{} is an ecosystem but it lacks of a comprehensive illustration of its packages;
+    \item coverage of trait functions are not fully tested.
 \end{itemize}
+Fundamentally this is because that it is still in the progress of finding the most suitable programming style to process images using \langjulia.
 
-Unlike other mature julia packages such as \repojump and \repogpuarrays, \images{} requires potential users to understand the very details of its mechanism and architecture, and even harder without comprehensive documentation on it. This project aims to solve this confilct by
+Fortunately this problem is well-concerned in the community. Issues such as
+\begin{itemize}
+    \item \issue{\juliaimages}{\images}{766}
+    \item \issue{\juliaimages}{\images}{767}
+    \item \issue{\juliaimages}{\images}{772}
+    \item \issue{zygmuntszpak}{\imagebinarization}{23}
+\end{itemize}
+dicuss the coding styles in the most generic way, and packages such as
+\begin{itemize}
+    \item \repohistogramthresholding
+    \item \repoimagebinarization
+\end{itemize}
+are examples validating the effectiveness of style consensus reached in those issues. In \imagebinarization, one could binarize an image using any implemented methods\footnote{At the time of writing, there're 12 methods implemented.} with one unified API: \mint{julia}|binarize(::BinarizationAlgorithm, ::AbstractArray{T,2}) where {T}|
+
+With these existing work, it's in the right time to revisit the whole \images ecosystem and head towards a more easy-to-use \images package. This project aims to solve this problem by:
 
 \begin{itemize}
-    \item providing more comprehensive documentation on both style guide and ecosystem illustration,
-    \item pruning the \images{} codebase according to the provided documentation, and
+    \item providing more comprehensive and integrated documentation on both style guide and ecosystem illustration,
+    \item pruning codebase of the ecosystem according to the provided documentation, and
+    \item converting \images{} to an entrance to the ecosystem.
 \end{itemize}
 
-Basically, this is a project on documentation and code refactoring.
+Writing demos of \images{} is not included in this project since it belongs to a totally different project. Basically, this is a project on documentation and code refactoring.
