early stage of proposal draft

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -2,7 +2,7 @@
 
 \section{About the Author}\label{sec:about_author}
 
-My name is \textsf{Jiuning Chen}\footnote{This is the official name, but for most of time I prefer using \textsf{Johnny Chen}.}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
+My name is \textsf{Jiuning Chen}. I'm currently doing research related to image processing, computer vision, convex optimization and machine learning.\par
 
 \subsection{Programming Background}
 
