--- a/Proposal/symbols.tex
+++ b/Proposal/symbols.tex
@@ -1,5 +1,7 @@
 % !TEX root = ./main.tex
 
+\newcommand{\todo}[1]{\textcolor{red}{ TODO: (#1)}}
+
 \newcommand{\mailto}[1]{\href{mailto:#1}{\textsuperscript{\Email}}}
 \newcommand{\version}[1]{v$#1$\xspace}
 
