add more details to documentation stage

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -17,7 +17,7 @@ Although my programming career is only about three years, however, I think I'm q
 \end{itemize}
 to undergraduate students in the university:
 \begin{itemize}
-    \item Head teaching assistant of courses of "Deep Learning and its Practice" (Fall 2018) and "Digital Image Processing" (Spring 2019).
+    \item Head teaching assistant of courses of ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DeepLearning/Fall2018/index.html}{Deep Learning and Action (Fall 2018)}''  and ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DigitalImageProcessing/Spring2019/index.html}{Digital Image Processing (Spring 2019)}''.
     \item Unofficially mentor talented students with all the best programming practices I learned from the open-source community and from the English world\footnote{Most Chinese students are afraid of reading English since it's not their native language, however, almost all best materials are in forms of it. My role here is to learn and to preach.}.
 \end{itemize}
 and to the open-source community:
@@ -31,11 +31,11 @@ and to the open-source community:
     \item Repo: \repodipcode
 \end{itemize}
 
-The following is a some kind of self-evaluation to let you have a more structural overview of myself:
+The following is an informal self-evaluation to let you have a more structural overview of my skill:
 
 \begin{itemize}
     \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising based on hybrid method of variational model and deep learning;
-    \item \textbf{Linux (8/10)}: heavy usage of docker, bash, git and vim in my daily work;
+    \item \textbf{Linux (8/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
     \item \textbf{Matlab (8/10)}: the only programming language used throughout my early-stage of research;
     \item \textbf{Julia (6/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
     \item \textbf{Related packages (6/10)}: familiar with other open-source image-processing packages but haven't dig into them yet;
