--- a/Proposal/symbols.tex
+++ b/Proposal/symbols.tex
@@ -36,10 +36,14 @@
 \newcommand{\pycall}{\reponame{PyCall.jl}}
 \newcommand{\imagebinarization}{\reponame{ImageBinarization.jl}}
 \newcommand{\histogramthresholding}{\reponame{HistogramThresholding.jl}}
+\newcommand{\imagenoise}{\reponame{ImageNoise.jl}}
+\newcommand{\imagesgithubio}{\reponame{juliaimages.github.io}}
 
 % repository urls
 \newcommand{\gitrepo}[2]{\href{https://github.com/#1/#2}{\sname{#2}}\xspace}
 \newcommand{\repoimagetransformations}{\gitrepo{\juliaimages}{\imagetransformations}}
+\newcommand{\repoimagecore}{\gitrepo{\juliaimages}{\imagecore}}
+\newcommand{\repoimageaxes}{\gitrepo{\juliaimages}{\imageaxes}}
 \newcommand{\repodipcode}{\gitrepo{Johnnychen94}{Digital-Image-Processing-Gonzalez}}
 \newcommand{\repodeeplearningtutorial}{\gitrepo{Johnnychen94}{DeepLearning\_Tutorial}}
 \newcommand{\reposcikitimage}{\gitrepo{scikit-image}{scikit-image}}
@@ -49,6 +53,10 @@
 \newcommand{\repopycall}{\gitrepo{JuliaPy}{\pycall}}
 \newcommand{\repoimagebinarization}{\gitrepo{zygmuntszpak}{\imagebinarization}}
 \newcommand{\repohistogramthresholding}{\gitrepo{zygmuntszpak}{\histogramthresholding}}
+\newcommand{\repoimagenoise}{\gitrepo{johnnychen94}{\imagenoise}}
+\newcommand{\repoimagesgithubio}{\gitrepo{\juliaimages}{juliaimages.github.io}}
+\newcommand{\repogsoctempdoc}{\gitrepo{johnnychen94}{GSoC2019\_Document}}
+
 
 % other urls
 \newcommand{\matlabimageprocessing}{\href{https://www.mathworks.com/products/image.html}{\sname{MATLAB Image Processing Toolbox}\xspace}}
@@ -61,7 +69,9 @@
 \newcommand{\gitpeople}[2]{\href{https://github.com/#1}{\sname{#2}}\xspace}
 \newcommand{\johnnychen}{\gitpeople{Johnnychen94}{Johnny Chen}}
 
-\newcommand{\evizero}{\gitpeople{Evizero}{Evizero}}
+\newcommand{\zygmunt}{\gitpeople{zygmuntszpak}{Zygmunt L. Szpak}}
+\newcommand{\julio}{\gitpeople{juliohm}{J\'ulio Hoffimann}}
+\newcommand{\evizero}{\gitpeople{Evizero}{Christof Stocker}}
 \newcommand{\timholy}{\gitpeople{timholy}{Tim Holy}}
 \newcommand{\mbauman}{\gitpeople{mbauman}{Matt Bauman}}
 \newcommand{\mikeinnes}{\gitpeople{MikeInnes}{Mike J Innes}}
