--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -13,7 +13,8 @@
 \title{GSoC 2019 Project\\Towards Better Images Ecosystem}
 \author{Jiuning Chen\mailto{johnnychen94@hotmail.com}\\
 Github: \href{https://github.com/johnnychen94}{Johnnychen94}\\
-Slack: Johnny Chen
+Mentors: \zygmunt, \julio, \\
+\ \evizero, \timholy
 }
 \date{\today}
 
@@ -25,7 +26,7 @@ Slack: Johnny Chen
     This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of definition of \images{} ecosystem and its scope, a manual for developers, and a more consistent API.
 \end{abstract}
 
-\noindent The author is currently a third-year graduate student and Ph.D candidate in School of Mathematical Sciences, East China Normal University, Shanghai, China. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
+\noindent The author is currently a third-year graduate student and Ph.D candidate in School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
 
 \input{project}
 
