--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -2,7 +2,7 @@
 
 \section{Project Introduction}\label{sec:project}
 
-\repoimages{} is a \langjulia image-processing toolbox, including several packages such as: \imagecore, \imagetransformations, \imageaxes. It provides a collection of out-of-box functions\footnote{An overview of currently implemented image-processing functionalities is shown at \apicomparison.} to do image processing tasks just like \reposcikitimage and \matlabimageprocessing.
+\repoimages{} is a \langjulia image-processing toolbox, including several packages such as: \repoimagecore, \repoimagetransformations, \repoimageaxes. It provides a collection of out-of-box functions\footnote{An overview of currently implemented image-processing functionalities is shown at \apicomparison.} to do image processing tasks just like \reposcikitimage and \matlabimageprocessing.
 
 However, despite of the performance, this toolbox at present is still not friendly to both users and developers; Unlike other mature julia packages such as \repojump and \repogpuarrays, \images{} requires potential users to understand the very details of its mechanism and architecture, and this is even harder for them without comprehensive documentation on it. Under this circumstance, most image-processing researchers are still using \langpython and \langmatlab for their daily work.
 
@@ -39,3 +39,5 @@ With these existing work, it's in the right time to revisit the whole \images{} 
 \end{itemize}
 
 Writing demos of \images{} is not included in this project since it belongs to a totally different project. Basically, this is a project on documentation and code refactoring.
+
+\todo{How many packages will be involved in this project?}
